--- a/recipes/steamedredbuns.html
+++ b/recipes/steamedredbuns.html
@@ -9,7 +9,7 @@
       <br> <br>
       <img style= float:left; hspace="20" vspace="20" src="images/redbun.jpg" alt="Spirited Away scene, eating red buns">
         <h3 style="text-align:center;"> <ins>Description</ins> </h3>
-        <p style="text-align:center; margin: 0px 0px 110px 0px"> A comforting snack depicted in the film, Spirited Away, are these ever-so-squishy red bean buns.
+        <p style="text-align:center; margin: 0px 0px 120px 0px"> A comforting snack depicted in the film, Spirited Away, are these ever-so-squishy red bean buns.
         While making these from scratch can be a bit laborious, the end result is well worth it when you get to hold your own squishy
         creation in your own hands. Red bean buns consist of two delicious compononets: a leavened dough wrapper that's pillowy soft
          and fluffy filled with a creamy sweet paste made of adzuki beans. Incredibly unique in flavor, it has been compared to the
@@ -17,23 +17,33 @@
 <!-- <h4> Ingredients </h4> -->
      <table style="float:center; width:100%;">
        <tr>
-         <th style="width:20%;">Ingredients</th>
-         <th style="width:20%;">Steps</th>
+         <th style="width:20%;"> <ins>Ingredients</ins></th>
+         <th style="width:20%;"><ins>Steps</ins></th>
         </tr>
         <tr>
           <td>
             <ul> <!-- Ingredients -->
               <li>2.4 cups (300g) of All Purpose Flour</li>
               <li>40g white sugar</li>
+              <li>1.5 tsp of instant yeast</li>
               <li>180ml of warm milk</li>
               <li>1 tbs vegetable oil</li>
               <li>Pinch of salt</li>
               <li>200g red bean paste filling</li>
             </ul>
           </td>
-          <td style="text-align:center;">
+          <td>
             <ol> <!-- Steps -->
-              <li> 12345 </li>
+              <li>Warm milk to 35 degrees celcius</li>
+              <li>Combine milk, flour, sugar, yeast, veggie oil and salt in a large bowl</li>
+              <li>After stirring thoroughly begin to hand-knead the dough until properly mixed</li>
+              <li>Allow dough to sit and rise at room-temp for one hour </li>
+              <li>Then, add an additional tablespoon of flour and knead some more</li>
+              <li>Divide dough into 6 even balls</li>
+              <li>Starting from the center and pushing outward, flatten the dough until edges are thin</li>
+              <li>Spoon the red paste evenely into the center and form a dome shape</li>
+              <li>Steam buns for 20 minutes, then allow to settle for 5 more minutes</li>
+              <li>Ready to eat!</li>
             </ol>
           </td>
         </tr>
