--- a/recipes/steamedredbuns.html
+++ b/recipes/steamedredbuns.html
@@ -17,7 +17,7 @@
         wrapper that's pillowy soft and fluffy filled with a creamy sweet paste made of adzuki beans. Incredibly unique in flavor, it
         has been compared to the taste of sweet potato with added sugar, as well as creamy and earthy notes.</p>
     </div>
-    <div style="float:left; margin:0px 0px 0px 175px">
+    <div style="padding:20px;float:left;">
       <h4>Ingredients</h4>
         <ul>
           <li>2.4 cups (300g) of All Purpose Flour</li>
@@ -29,9 +29,9 @@
           <li>200g red bean paste filling</li>
         </ul>
     </div>
-    <div style="float:right; margin:0px 30px 0px 0px">
+    <div style="padding:20px;float:left;">
       <h4>Steps</h4>
-      <ol> <!-- Steps -->
+      <ol>
         <li>Warm milk to 35 degrees celcius</li>
         <li>Combine milk, flour, sugar, yeast, veggie oil and salt in bowl</li>
         <li>After stirring thoroughly begin to hand-knead the dough until mixed</li>
