Nothing major, adjusted look of code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <title>HTML Project</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/steamedredbuns.html">Click Here </a>
+    <h1 style="text-align:center;">Odin Recipes</h1>
+     <div id="image" style="text-align:center;">
+      <img src="recipes/images/indeximg.jpg" style="width:500px; height:400px;">
+     </div>
+<br>
+    <div id="content">
+      <p> The best comfort food for the weeb in all of us. Click below to view each recipe! </p>
+        <a href="recipes/steamedredbuns.html" title="Spirited Away"> Steamed Red Buns </a> <br>
+        <a href="nil"> Food 2 </a> <br>
+        <a href="nil"> Food 3 </a>
+    </div>
+    <br><hr>
   </body>
 </html>
