--- a/recipes/steamedredbuns.html
+++ b/recipes/steamedredbuns.html
@@ -9,7 +9,7 @@
     <div style="text-align:center;" id="image">
       <img src="images/redbun.jpg" alt="Spirited Away scene, eating red buns;" style="width:720px;height:400px;">
     </div>
-    <div id=content1>
+    <div id="content1">
       <h3 style="text-align:center;"> <ins>Description</ins> </h3>
         <p style="text-align:center; margin: 0px 30px 40px 30px"> A comforting snack depicted in the film, Spirited Away, are these
         ever-so-squishy red bean buns. While making these from scratch can be a bit laborious, the end result is well worth it when you
@@ -17,7 +17,7 @@
         wrapper that's pillowy soft and fluffy filled with a creamy sweet paste made of adzuki beans. Incredibly unique in flavor, it
         has been compared to the taste of sweet potato with added sugar, as well as creamy and earthy notes.</p>
     </div>
-    <div style="padding:20px;float:left;">
+    <div id="content2" style="padding:20px;float:left;">
       <h4>Ingredients</h4>
         <ul>
           <li>2.4 cups (300g) of All Purpose Flour</li>
