--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -5,9 +5,35 @@
     <title>Ham Ramen</title>
   </head>
   <body>
-    <h1 style="text-align:center;"> Ham Ramen <em>(Ponyo)</em> </h1>
+    <h1 style="text-align:center;"> Instant Ham Ramen <em>(Ponyo)</em> </h1>
     <div id="image2" style="text-align:center;">
       <img src="images/ramen.jpg">
+    </div>
+    <div id="content" style="text-align:center;">
+      <h3> Description </h3>
+      <p style="text-align:center; margin: 0px 30px 40px 30px;"> Ramen is a dish best at anytime, with anything. There is something
+      especially tanalizing about the ramen shown in Ponyo, with its thin slices of bright pink ham, tasty egg and scallions. Luckily,
+      this Ponyo ramen is super easy to recreate from home. Feel free to adjust or add any ingredients your heart desires! </p>
+    </div>
+    <div id="ingredients" style="padding:20px;float:left;">
+      <h4> Ingredients </h4>
+      <ul>
+        <li>1 package of Nissin Chicken Ramen</li>
+        <li>400ml boiling water</li>
+        <li>1 slice of cooked ham</li>
+        <li>1/2 hard boiled egg</li>
+        <li>Chopped green onion</li>
+      </ul>
+    </div>
+    <div id="steps" style="padding:20px;float:left;">
+      <h4> Steps </h4>
+        <ol>
+          <li>Bring water to a rapid boil</li>
+          <li>Place noodles in a bowl, pour boiling water over the noodles and cover.</li>
+          <li>After 1 minute, quickly seperate noodles, and arrange the ham, egg and green onion.</li>
+          <li>Cover again, and allow bowl to sit for 2 more minutes.</li>
+          <li>Ready to eat!</li>
+        </ol>
     </div>
   </body>
 </html>
