--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="content">
       <p> The best comfort food for the weeb in all of us. Click below to view each recipe! </p>
         <a href="recipes/steamedredbuns.html" title="Spirited Away"> Steamed Red Buns </a> <br>
-        <a href="nil"> Food 2 </a> <br>
+        <a href="recipes/ramen.html"> Instant Ham Ramen </a> <br>
         <a href="nil"> Food 3 </a>
     </div>
     <br><hr>
