Completed Ramen, added link to homepage.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p> The best comfort food for the weeb in all of us. Click below to view each recipe! </p>
         <a href="recipes/steamedredbuns.html" title="Spirited Away"> Steamed Red Buns </a> <br>
         <a href="recipes/ramen.html"> Instant Ham Ramen </a> <br>
-        <a href="nil"> Food 3 </a>
+        <a href="recipes/okayu.html"> Okayu (Rice Porridge)</a>
     </div>
     <br><hr>
   </body>
