--- a/recipes/steamedredbuns.html
+++ b/recipes/steamedredbuns.html
@@ -9,9 +9,9 @@
     <div style="text-align:center;" id="image">
       <img src="images/redbun.jpg" alt="Spirited Away scene, eating red buns;" style="width:720px;height:400px;">
     </div>
-    <div id="content1">
-      <h3 style="text-align:center;"> <ins>Description</ins> </h3>
-        <p style="text-align:center; margin: 0px 30px 40px 30px"> A comforting snack depicted in the film, Spirited Away, are these
+    <div id="content1" style="text-align:center;">
+      <h3> <ins>Description</ins> </h3>
+        <p style="margin: 0px 30px 40px 30px"> A comforting snack depicted in the film, Spirited Away, are these
         ever-so-squishy red bean buns. While making these from scratch can be a bit laborious, the end result is well worth it when you
         get to hold your own squishy creation in your own hands. Red bean buns consist of two delicious compononets: a leavened dough
         wrapper that's pillowy soft and fluffy filled with a creamy sweet paste made of adzuki beans. Incredibly unique in flavor, it
@@ -29,7 +29,7 @@
           <li>200g red bean paste filling</li>
         </ul>
     </div>
-    <div style="padding:20px;float:left;">
+    <div style="padding:20px;float:left; text-align:center;">
       <h4>Steps</h4>
       <ol>
         <li>Warm milk to 35 degrees celcius</li>
@@ -43,6 +43,11 @@
         <li>Steam buns for 20 minutes, then allow to settle for 5 more minutes</li>
         <li>Ready to eat!</li>
      </ol>
+     <br>
     </div>
+    <footer style="text-align:center; clear:left;">
+      <hr>
+      <a href="../index.html"> Return to Homepage </a>
+    </footer>
   </body>
 </html>
