--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,7 @@
   <body>
     <h1 style="text-align:center;"> Instant Ham Ramen <em>(Ponyo)</em> </h1>
     <div id="image2" style="text-align:center;">
-      <img src="images/ramen.jpg">
+      <img src="images/ramen.jpg" alt="Scene from Ponyo, ramen bowl">
     </div>
     <div id="content" style="text-align:center;">
       <h3> Description </h3>
@@ -25,7 +25,7 @@
         <li>Chopped green onion</li>
       </ul>
     </div>
-    <div id="steps" style="padding:20px;float:left;">
+    <div id="steps" style="padding:20px;float:left; text-align:center;">
       <h4> Steps </h4>
         <ol>
           <li>Bring water to a rapid boil</li>
@@ -34,6 +34,11 @@
           <li>Cover again, and allow bowl to sit for 2 more minutes.</li>
           <li>Ready to eat!</li>
         </ol>
+        <br>
     </div>
+    <footer style="text-align:center; clear:left;">
+      <hr>
+      <a href="../index.html"> Return to Homepage </a>
+    </footer>
   </body>
 </html>
