Final CSS touches

--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css" />
     <title>HTML Project</title>
   </head>
   <body>
-    <h1 style="text-align:center;">Odin Recipes</h1>
-     <div id="image" style="text-align:center;">
+    <h1 class="title">Odin Recipes</h1>
+     <div class="image" style="text-align:center;">
       <img src="recipes/images/indeximg.jpg" style="width:500px; height:400px;">
      </div>
 <br>
-    <div id="content">
-      <p> The best comfort food for the weeb in all of us. Click below to view each recipe! </p>
-        <a href="recipes/steamedredbuns.html" title="Spirited Away"> Steamed Red Buns </a> <br>
-        <a href="recipes/ramen.html"> Instant Ham Ramen </a> <br>
-        <a href="recipes/okayu.html"> Okayu (Rice Porridge)</a>
+    <p> The best comfort food for the weeb in all of us. Click below to view each recipe! </p>
+    <div class="links">
+      <ul>
+        <li><a href="recipes/steamedredbuns.html" title="Spirited Away" target="_blank"> Steamed Red Buns </a></li>
+        <li><a href="recipes/ramen.html" title="Ponyo" target="_blank"> Instant Ham Ramen </a></li>
+        <li><a href="recipes/okayu.html" title="Princess Mononoke" target="_blank"> Okayu (Rice Porridge)</a></li>
+      </ul>
     </div>
-    <br><hr>
   </body>
 </html>
