--- a/recipes/okayu.html
+++ b/recipes/okayu.html
@@ -2,21 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles.css" />
     <title>Okayu (Rice Porridge)</title>
   </head>
   <body>
     <h1 style="text-align:center;">Okayu <em>(Princess Mononoke)</em></h1>
     <h4 style="text-align:center;">AKA Rice Porridge</h4>
-    <div id="image3" style="text-align:center;">
+    <div class="image" style="text-align:center;">
       <img src="images/okayu.jpg">
     </div>
-    <div id="content" style="text-align:center;">
+    <div class="content" style="text-align:center;">
     <h3>Description</h3>
     <p>The comforting pot of Okayu eaten by Ashitaka and the monk in Princess Mononoke is an easy dish to recreate from home. This
     savoury rice porridge is a staple comfort food across Asia, and takes only a few easy ingredients to make it taste wonderful
     (and oh so comforting).</p>
     </div>
-    <div id="ingredients" style="padding:20px;float:left;">
+    <div class="list">
       <h4> Ingredients </h4>
       <ul>
         <li>2 cups of white rice</li>
@@ -28,7 +29,7 @@
         <li>Hot chili/sesame oil</li>
       </ul>
     </div>
-    <div id="steps" style="padding:20px;float:left; text-align:center;">
+    <div class="steps">
       <h4> Steps </h4>
       <ol>
         <li>Add water and rice to a pot over high heat</li>
@@ -41,9 +42,12 @@
       </ol>
       <br>
       </div>
-    <footer style="text-align:center; clear:left;">
-       <hr>
-       <a href="../index.html"> Return to Homepage </a>
+    <footer>
+       <ul>
+         <li><a href="../index.html">Return Home </a></li>
+         <li><a href="steamedredbuns.html" target="_blank"> Steamed Red Buns </a></li>
+         <li><a href="ramen.html" target="_blank"> Ham Ramen</a></li>
+       </ul>
      </footer>
   </body>
 </html>
