--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -2,30 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles.css" />
     <title>Ham Ramen</title>
   </head>
   <body>
     <h1 style="text-align:center;"> Instant Ham Ramen <em>(Ponyo)</em> </h1>
-    <div id="image2" style="text-align:center;">
+    <div class="image" style="text-align:center;">
       <img src="images/ramen.jpg" alt="Scene from Ponyo, ramen bowl">
     </div>
-    <div id="content" style="text-align:center;">
+    <div class="content">
       <h3> Description </h3>
-      <p style="text-align:center; margin: 0px 30px 40px 30px;"> Ramen is a dish best at anytime, with anything. There is something
+      <p> Ramen is a dish best at anytime, with anything. There is something
       especially tanalizing about the ramen shown in Ponyo, with its thin slices of bright pink ham, tasty egg and scallions. Luckily,
       this Ponyo ramen is super easy to recreate from home. Feel free to adjust or add any ingredients your heart desires! </p>
     </div>
-    <div id="ingredients" style="padding:20px;float:left;">
+    <div class="list">
       <h4> Ingredients </h4>
       <ul>
-        <li>1 package of Nissin Chicken Ramen</li>
+        <li>1 package of chicken ramen</li>
         <li>400ml boiling water</li>
         <li>1 slice of cooked ham</li>
         <li>1/2 hard boiled egg</li>
         <li>Chopped green onion</li>
       </ul>
     </div>
-    <div id="steps" style="padding:20px;float:left; text-align:center;">
+    <div class="steps">
       <h4> Steps </h4>
         <ol>
           <li>Bring water to a rapid boil</li>
@@ -36,9 +37,12 @@
         </ol>
         <br>
     </div>
-    <footer style="text-align:center; clear:left;">
-      <hr>
-      <a href="../index.html"> Return to Homepage </a>
+    <footer>
+      <ul>
+        <li><a href="../index.html">Return Home </a></li>
+        <li><a href="steamedredbuns.html" target="_blank"> Steamed Red Buns </a></li>
+        <li><a href="okayu.html" target="_blank"> Okayu (Rice Porridge)</a></li>
+      </ul>
     </footer>
   </body>
 </html>
