--- a/recipes/steamedredbuns.html
+++ b/recipes/steamedredbuns.html
@@ -2,22 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles.css" />
     <title>Steamed Red Buns</title>
   </head>
   <body>
     <h1 style="text-align:center;"> Steamed Red Buns <em>(Spirited Away)</em> </h1>
-    <div style="text-align:center;" id="image">
+    <div class="image" style="text-align:center;">
       <img src="images/redbun.jpg" alt="Spirited Away scene, eating red buns;" style="width:720px;height:400px;">
     </div>
-    <div id="content1" style="text-align:center;">
+    <div class="content">
       <h3> <ins>Description</ins> </h3>
-        <p style="margin: 0px 30px 40px 30px"> A comforting snack depicted in the film, Spirited Away, are these
+        <p> A comforting snack depicted in the film, Spirited Away, are these
         ever-so-squishy red bean buns. While making these from scratch can be a bit laborious, the end result is well worth it when you
         get to hold your own squishy creation in your own hands. Red bean buns consist of two delicious compononets: a leavened dough
         wrapper that's pillowy soft and fluffy filled with a creamy sweet paste made of adzuki beans. Incredibly unique in flavor, it
         has been compared to the taste of sweet potato with added sugar, as well as creamy and earthy notes.</p>
     </div>
-    <div id="content2" style="padding:20px;float:left;">
+    <div class="list">
       <h4>Ingredients</h4>
         <ul>
           <li>2.4 cups (300g) of All Purpose Flour</li>
@@ -29,7 +30,7 @@
           <li>200g red bean paste filling</li>
         </ul>
     </div>
-    <div style="padding:20px;float:left; text-align:center;">
+    <div class="steps">
       <h4>Steps</h4>
       <ol>
         <li>Warm milk to 35 degrees celcius</li>
@@ -45,9 +46,12 @@
      </ol>
      <br>
     </div>
-    <footer style="text-align:center; clear:left;">
-      <hr>
-      <a href="../index.html"> Return to Homepage </a>
+    <footer>
+      <ul>
+        <li><a href="../index.html">Return Home </a></li>
+        <li><a href="ramen.html" target="_blank"> Instant Ham Ramen </a></li>
+        <li><a href="okayu.html" target="_blank"> Okayu (Rice Porridge)</a></li>
+      </ul>
     </footer>
   </body>
 </html>
